EVA-132 Feat: Se agregan mas campos a la tabla del template de solicitudes de proveedor

--- a/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
@@ -31,7 +31,9 @@
                                                 <tr>
                                                     <th>Nombre</th>
                                                     <th>Identificación</th>
-                                                    <th>Tipo de identificación</th>
+                                                    <th>Ubicación</th>
+                                                    <th>Teléfono</th>
+                                                    <th>Correo</th>
                                                     <th>Estado</th>
                                                     <th>Fecha de Envío de Solicitud</th>
                                                     <th>Acción</th>
@@ -41,18 +43,20 @@
                                                 {% for solicitud in solicitudes %}
                                                     <tr>
                                                         <td>{{ solicitud.proveedor.nombre }}</td>
-                                                        <td>{{ solicitud.proveedor.identificacion}}</td>
-                                                        <td>{{ solicitud.proveedor.tipo_identificacion}}</td>
+                                                        <td>{{ solicitud.proveedor.tipo_identificacion.sigla}} {{ solicitud.proveedor.identificacion}}</td>
+                                                        <td>{{ solicitud.proveedor.ciudad | title }} - {{ solicitud.proveedor.ciudad.departamento | title }} - {{ solicitud.proveedor.ciudad.departamento.pais }}</td>
+                                                        <td>{{ solicitud.proveedor.telefono_movil_principal }}</td>
+                                                        <td>{{ solicitud.proveedor.telefono_movil_principal }}</td>
                                                         <td>
-                                                            {% if solicitud.estado == True %}
+                                                            {% if solicitud.proveedor.estado == True %}
                                                             <span class="badge badge-primary">Activo</span>
                                                             {% else %}
                                                             <span class="badge badge-secondary">Inactivo</span>
                                                             {% endif %}
                                                         </td>
-                                                        <td>{{ solicitud.fecha_creacion|date:'Y-m-d H:i' }}</td>
+                                                        <td>{{ solicitud.fecha_creacion|date:'Y-m-d' }}</td>
                                                         <td>
-                                                            <a class="far fa-2x fa-eye" href="{% url 'Administracion:proveedor-perfil' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Perfil"></a>
+                                                            <a class="far fa-2x fa-eye" href="{% url 'Administracion:proveedor-solicitudes-perfil' solicitud.proveedor_id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Perfil"></a>
                                                         </td>
                                                     </tr>
                                                 {% endfor %}
