EVA-137 feat: En el input_tag_general se asegura que si el valor del campo es None coloque un String vacio, para evitar que se muestre None.

--- a/EVA/templates/EVA/_general_tags/_input_general_tag.html
+++ b/EVA/templates/EVA/_general_tags/_input_general_tag.html
@@ -20,7 +20,7 @@
         <div class="custom-file">
     {% endif %}
 
-    <input type="{{ tipo }}" id="{{ nombre }}_id" name="{{ nombre }}"  {% if is_fecha  %} value="{{ valor|date:'Y-m-d' }}" {% else %} value="{{ valor }}" {% endif %} {{ propiedades }}>
+    <input type="{{ tipo }}" id="{{ nombre }}_id" name="{{ nombre }}"  {% if is_fecha  %} value="{{ valor|date:'Y-m-d' }}" {% else %} value="{{ valor|default_if_none:'' }}" {% endif %} {{ propiedades }}>
 
     {% if tipo == 'file' %}
         <label class="custom-file-label" for="{{nombre}}_id">Seleccione un archivo</label>
