--- a/Financiero/templates/Financiero/Facturacion/_agregar_item_modal.html
+++ b/Financiero/templates/Financiero/Facturacion/_agregar_item_modal.html
@@ -27,13 +27,16 @@
                     </div>
 
                     <div class="row">
-                        <div class="form-group col-sm-6 col-md-4 col-lg-4">
+                        <div class="form-group col-sm-6 col-md-3 col-lg-3">
                             {% input_currency_tag 'valor_unitario' "Valor unitario:" placeholder="Ingrese valor unitario" required="" min="0.01" max="9999999999.99" step="0.01" %}
                         </div>
-                        <div class="form-group col-sm-6 col-md-4 col-lg-4">
+                        <div class="form-group col-sm-6 col-md-3 col-lg-3">
                             {% input_number_format_tag 'cantidad' "Cantidad:" placeholder="Ingrese cantidad" required="" min="0.01" max="9999999999.99" step="0.01" %}
                         </div>
-                        <div class="form-group col-sm-6 col-md-4 col-lg-4">
+                         <div class="form-group col-sm-6 col-md-3 col-lg-3">
+                            {% select_tag unidades_medida 'unidad_medida' 'Seleccione la unidad de medida' texto_label="U/M:" value='94' required="" mensaje_validacion='Seleccione una unidad de medida'%}
+                        </div>
+                        <div class="form-group col-sm-6 col-md-3 col-lg-3">
                             {% select_tag impuestos 'impuesto' 'Seleccione el impuesto' texto_label="Impuesto:" %}
                         </div>
                     </div>
