--- a/Financiero/templates/Financiero/Facturacion/crear_factura.html
+++ b/Financiero/templates/Financiero/Facturacion/crear_factura.html
@@ -108,6 +108,29 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xl-12">
+                    <div id="panel-observaciones" class="panel">
+                        <div class="panel-hdr">
+                            <h2>
+                                Observaciones
+                            </h2>
+                            <div class="panel-toolbar">
+                                <button class="btn btn-panel" data-action="panel-collapse" data-toggle="tooltip" data-offset="0,10" data-original-title="Collapse"></button>
+                            </div>
+                        </div>
+                        <div class="panel-container show">
+                            <div class="panel-content">
+                                <div class="form-row">
+                                    <div class="form-group col-12">
+                                        {% input_general_tag 'observaciones' texto_label="" type="textarea" placeholder="Ingrese aquí las observaciones si aplica." required="" minlength="15" maxlength="1000"%}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
                     <a href="{% url 'Financiero:factura-index' %}" class="btn btn-danger btn-pills mr-1"><i class="fal fa-times"></i> Cancelar</a>
