EVA-137 feat: Se piden en la creación y edición de empresas los datos necesarios que se utilizarn al momento de realizar la facturación electrónica.
Falta hacer las modificaciones para la subempresas.

--- a/Administracion/templates/Administracion/Empresas/crear-editar.html
+++ b/Administracion/templates/Administracion/Empresas/crear-editar.html
@@ -37,8 +37,51 @@
                                                 <div class="col-md-6">
                                                     {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" required="" maxlength="100" value=empresa.nombre mensaje_validacion='Por favor digite el nombre.' invalido=errores.nombre %}
                                                 </div>
+                                                <div class="col-md-5">
+                                                    {% input_text_tag 'nit' 'NIT' placeholder="Ingrese el nit de la empresa" required="" maxlength="20" pattern="[0-9]*" value=empresa.nit mensaje_validacion='Por favor digite el nit de la empresa' invalido=errores.nit%}
+                                                </div>
+                                                 <div class="col-md-1">
+                                                    {% input_number_tag 'digito_verificacion' 'DV' placeholder='Ingrese el DV' required='' min='0' max='9' value=empresa.digito_verificacion mensaje_validacion='Por favor ingrese el digito de verificación' invalido=errores.digito_verificacion %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
                                                 <div class="col-md-6">
-                                                    {% input_text_tag 'nit' 'NIT' placeholder="Ingrese el nit de la empresa" required="" maxlength="20" value=empresa.nit mensaje_validacion='Por favor digite el nit de la empresa' invalido=errores.nit %}
+                                                    {% input_text_tag 'direccion' 'Dirección' placeholder='Ingrese la dirección' maxlength='100' value=empresa.direccion mensaje_validacion='Por favor digite una dirección' invalido=errores.direccion %}
+                                                </div>
+                                                <div class="col-md-6">
+                                                    {% input_text_tag 'codigo_postal' 'Código Postal' placeholder="Ingrese el código postal" required="" maxlength="6" minlength="6" pattern='[0-9]{6,6}' value=empresa.codigo_postal mensaje_validacion='Por favor digite el código postal.' invalido=errores.codigo_postal %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
+                                                <div class="col-md-6">
+                                                 {% select_tag departamentos 'departamento_id' 'Seleccione un departamento' texto_label="Departamento" value=empresa.municipio.departamento.id required="" mensaje_validacion='Por favor seleccione un departamento.'  %}
+                                                 </div>
+                                                <div class="col-md-6">
+                                                {% select_tag municipios 'municipio_id' 'Seleccione un municipio' texto_label="Municipio" value=empresa.municipio_id required="" mensaje_validacion='Por favor seleccione un municipio.'  %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
+                                                <div class="col-md-6">
+                                                    {% select_tag tipos_persona 'tipo_persona' 'Seleccione un tipo de persona' is_tupla=True texto_label="Tipo de Persona" value=empresa.tipo_persona required="" mensaje_validacion='Por favor seleccione un tipo de persona.' invalido=errores.tipo_persona %}
+                                                </div>
+                                                <div class="col-md-6">
+                                                    {% select_tag regimenes_fiscales 'regimen_fiscal' 'Seleccione un régimen fiscal' is_tupla=True texto_label="Régimen Fiscal" value=empresa.regimen_fiscal required="" mensaje_validacion='Por favor seleccione un régimen fiscal.' invalido=errores.regimen_fiscal %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
+                                                <div class="col-md-6">
+                                                    {% select_multiple_tag responsabilidades 'responsabilidades' 'responsabilidades_id' 'Seleccione una responsabilidad fiscal' is_tupla=True texto_label="Responsabilidad Fiscal" value=responsabilidades_empresa required="" mensaje_validacion='Por favor seleccione una responsabilidad fiscal.' multiple='multiple' invalido=errores.responsabilidades %}
+                                                </div>
+                                                <div class="col-md-6">
+                                                    {% select_tag tributos 'tributo' 'Seleccione un tributo' is_tupla=True texto_label="Tributo" value=empresa.tributos required="" mensaje_validacion='Por favor seleccione un tributo.' invalido=errores.tributos%}
                                                 </div>
                                             </div>
                                         </div>
@@ -58,12 +101,12 @@
                                                 </div>
                                             </div>
                                         {% endif %}
-                                        <div class="form-row">
-                                            <div >
-                                                <button id="guardar" class="btn btn-primary btn-block">{% if opcion == 'editar' %} Actualizar {% else %} Agregar {% endif %}</button>
+                                        <div class="form-row justify-content-end">
+                                            <div>
+                                                <a href="{% url 'Administracion:empresas' %}" class="btn btn-danger btn-pills">Cancelar</a>
                                             </div>
-                                            <div style="padding-left: 15px">
-                                                <a href="{% url 'Administracion:empresas' %}" class="btn btn-danger btn-block">Cancelar</a>
+                                            <div class="pl-2">
+                                                <button id="guardar" class="btn btn-primary btn-pills">{% if opcion == 'editar' %} Actualizar {% else %} Agregar {% endif %}</button>
                                             </div>
                                         </div>
                                     </form>
