--- a/Administracion/templates/Administracion/Tercero/Proveedor/index.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/index.html
@@ -57,8 +57,9 @@
                                                             <th>Ubicación</th>
                                                             <th>Teléfono</th>
                                                             <th>Correo</th>
-                                                            <th>Estado</th>
+                                                            <th>Productos/Servicios</th>
                                                             <th>Fecha de Envío de Solicitud</th>
+                                                            <th>Estado</th>
                                                             <th>Acción</th>
                                                         </tr>
                                                     </thead>
@@ -71,13 +72,20 @@
                                                                 <td>{{ proveedor.telefono }}</td>
                                                                 <td>{{ proveedor.correo }}</td>
                                                                 <td>
+                                                                    {% for ps in productos_servicios %}
+                                                                        {% if ps.proveedor_id == proveedor.id %}
+                                                                            <span class="badge badge-primary">{{ ps.producto_servicio }}</span>
+                                                                        {% endif %}
+                                                                    {% endfor %}
+                                                                </td>
+                                                                <td>{{ proveedor.fecha_creacion|date:'Y-m-d' }}</td>
+                                                                <td>
                                                                     {% if proveedor.estado == True %}
                                                                     <span class="badge badge-primary">Activo</span>
                                                                     {% else %}
                                                                     <span class="badge badge-secondary">Inactivo</span>
                                                                     {% endif %}
                                                                 </td>
-                                                                <td>{{ proveedor.fecha_creacion|date:'Y-m-d' }}</td>
                                                                 <td>
                                                                     <a class="far fa-2x fa-eye" href="{% url 'Administracion:proveedor-solicitudes-perfil' proveedor.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Perfil"></a>
                                                                     <a class="far fa-2x fa-edit" {% if proveedor.estado %} href="javascript:cambiarEstadoProveedor('{{ proveedor.id }}', 'desactivar')" data-original-title="Desactivar" {% else %} href="javascript:cambiarEstadoProveedor('{{ proveedor.id }}', 'activar')" data-original-title="Activar" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
