--- a/Financiero/templates/Financiero/Facturacion/crear_factura.html
+++ b/Financiero/templates/Financiero/Facturacion/crear_factura.html
@@ -42,8 +42,11 @@
                                         <div class="col-sm-12 col-md-6 col-lg-6">
                                             {% select_tag terceros 'cliente' 'Seleccione el cliente' texto_label="Cliente:" requiered="" %}
                                         </div>
-                                        <div class="col-sm-12 col-md-6 col-lg-6">
+                                        <div class="col-sm-11 col-md-5 col-lg-5">
                                             {% input_text_tag 'cliente_nit' 'NIT:' readonly=""%}
+                                        </div>
+                                        <div class="col-sm-1 col-md-1 col-lg-1">
+                                            {% input_text_tag 'cliente_dv' 'DV:' readonly=""%}
                                         </div>
                                     </div>
                                 </div>
