EVA-138 Feat: Se agrega una validación para el tipo de persona e tarjeta de proveedor

--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -27,6 +27,10 @@
                                                 <a class="far fa-eye" href="{{ d.archivo }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Archivo"></a>
                                             {% endif %}
                                         </small>
+                                    {% elif d.tipo_persona_pro == d.tipo_persona %}
+                                        <small class="mt-0 mb-3 text-muted">
+                                            <b>{{ d.nombre_campo }}</b>: {{ d.valor_campo }}
+                                        </small>
                                     {% endif %}
                                 {% else %}
                                     <small class="mt-0 mb-3 text-muted">
